<resources>
    <string name="app_name">Traffico</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_button">Profile</string>
    <string name="get_direction_button">Get Direction</string>
    <string name="curr_situation_button">Current Situation</string>
    <string name="provide_info_button">Provide Info</string>
    <string name="log_out_button">Log Out</string>
    <string name="search_button">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign In</string>
    <string name="text_email">Email</string>
    <string name="home">Home</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="try_again">Try Again</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="failed_connection">Connection Failed.</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="and">and</string>
    <string name="provide_info">Provide Info</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="submit">Submit</string>
    <string name="auth_failed">Registration Failed.</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="log_out_failed">Log Out Failed</string>
    <string name="enter_values">Enter all values</string>
    <string name="check_button">Select one of the buttons</string>
</resources>
