<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/action_sign_in"
    tools:context="com.rrgps.routeoptimizer.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.54"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:text="@string/prompt_email"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/EmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:text="@string/error_invalid_email"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:text="@string/prompt_password"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/PasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:text="@string/error_incorrect_password"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.07"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.77"
                android:background="@color/colorPrimary"
                android:onClick="signInAction"
                android:text="@string/action_sign_in"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:background="@android:color/darker_gray"
                android:onClick="registerAction"
                android:text="@string/action_register" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
